--- a/app/templates/base.html.jinja
+++ b/app/templates/base.html.jinja
@@ -10,38 +10,41 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </head>
     <body  style="margin-right: 10px; margin-left: 10px;">
-        <header>
-            <div class="jumbotron">
-                <h1 class="display-4">Ceneo Web Scraper</h1>
-                <p class="lead">Aplikacja webowa</p>
-                <hr class="my-4">
-            </div>
+
+        <header class="container text-center">
+            <h1 class="display-1">Ceneo Web Scraper</h1>
         </header>
         
         <nav>
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link active" style="color: palevioletred" href="#">Active</a>
+                    <a class="nav-link" style="color: palevioletred" href="{{url_for('index')}}">Strona główna</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="color: palevioletred" href="#">Link</a>
+                    <a class="nav-link" style="color: palevioletred" href="{{url_for('extract', product_id=123112)}}">Pobierz produkt</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="color: palevioletred" href="#">Link</a>
+                    <a class="nav-link" style="color: palevioletred" href="#">Lista produktów</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" style="color: pink" href="#">Disabled</a>
+                    <a class="nav-link" style="color: palevioletred" href="{{url_for('author')}}">O autorze</a>
                 </li>
             </ul>
         </nav>
 
-        <div class="row" style="height: 100vh">
-            <div class="col-sm-4">
-                <div>
-                    <p>{{text}}</p>
+        <div class=container>
+            <div class="row" style="height: 100vh">
+                <div class="col-sm-4">
+                    <div>
+                        <p>{{text}}</p>
+                    </div>
+                </div>
+                <div class="col-sm-8">
+                    {% block content %}
+                        <p>base.html.jinja</p>
+                    {% endblock content %}
                 </div>
             </div>
-            <div class="col-sm-8">Kolumna w stosunku 8:4</div>
         </div>
 
         <footer class="py-3 my-4">
