--- a/app/templates/base.html.jinja
+++ b/app/templates/base.html.jinja
@@ -21,10 +21,10 @@
                     <a class="nav-link" style="color: palevioletred" href="{{url_for('index')}}">Strona główna</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="color: palevioletred" href="{{url_for('extract', product_id=123112)}}">Pobierz produkt</a>
+                    <a class="nav-link" style="color: palevioletred" href="{{url_for('extract')}}">Pobierz produkt</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="color: palevioletred" href="#">Lista produktów</a>
+                    <a class="nav-link" style="color: palevioletred" href="{{url_for('products')}}">Lista produktów</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" style="color: palevioletred" href="{{url_for('author')}}">O autorze</a>
