--- a/app/templates/extract.html.jinja
+++ b/app/templates/extract.html.jinja
@@ -5,7 +5,7 @@
     {% if error %}
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
             <i class="bi bi-heartbreak-fill"></i> <strong>{{error}}</strong>
-            <button type="button" class="btn-close data" data-bs-dismiss="alert" aria-label="Close"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     {% endif %}
     <form action="{{url_for('extract')}}" method="POST">
